# mats-poster

./: README.md  example-poster.md  generate_poster.sh  html_to_pdf.py  md_to_poster.py  poster.html  poster.md  pyproject.toml  serve.sh
output/: poster.html
scripts/: html_to_pdf.py  md_to_poster.py
